--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,145 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*, *::before, *::after { 
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --color-primary: #0000FF;
+    --color-secondary: #ffb116;
+    --color-primary-100:#D6E4FF;
+    --color-primary-200:#ADC8FF;
+    --color-primary-300:#84A9FF;
+    --color-primary-400:#6690FF;
+    --color-primary-500:#3366FF;
+    --color-primary-600:#254EDB;
+
+    --container-width-lg: 80%;
+    --container-width-md: 90%;
+
+    --transition: all 500ms ease;
+}
+
+body {
+    font-family: "Montserrat", sans-serif;
+    color: var(--color-primary-100);
+    line-height: 1.7;
+    overflow-x: hidden;
+    background: rgb(1, 1, 60);
+}
+
+.container {
+   width: var(--container-width-lg);
+   max-width: 120rem;
+   margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.2;
+    color: var(--color-primary-100);
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+a {
+    color: var(--color-primary-100);
+}
+
+img {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+}
+
+.btn {
+    color: var(--color-primary-100);
+    padding: 1rem 2rem;
+    margin: 0 auto;
+    width: fit-content;
+    background-color: var(--color-primary);
+    border-radius: 1.5rem;
+    transition: var(--transition);
+}
+
+.btn:hover {
+    background-color: var(--color-secondary);
+    
+    color: var(--color-primary-600);
+}
+
+.btn.lg {
+    padding: 1.5rem 3rem;
+    font-size: 1.1rem;
+    border-radius: 2rem;
+}
+
+.btn.sm {
+    padding: 0.4rem 1.2rem;
+    font-size: 0.9rem;
+}
+
+.btn.sm:hover {
+    background-color: var(--color-primary-100);
+}
+
+section {
+    margin-top: 10rem;
+}
+
+.card {
+    width: 100%;
+    background-color: rgb(1, 1, 60);
+    border: 2px solid white;
+    text-align: center;
+    padding: 2rem 3rem;
+    border-radius: 0 3rem 0 3rem;
+    transition: var(--transition);
+}
+.card:hover {
+    background-color: var(--color-primary-600)
+}
+
+.card:hover span {
+    background-color: var(--color-secondary);
+    color: var(--color-primary-500) ;
+}
+
+.card span {
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--color-primary-600);
+    padding: 0.8rem;
+    font-size: 1.1rem;
+    border-radius: 1rem;
+    display: block;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 64rem ) {
+    .container {
+        width: var(--container-width-md);
+    }
+    h1 {
+        font-size: 2rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+       
+}
+
+@media screen and (max-width: 40rem) {
+    h1 {
+        font-size: 2.2rem;
+    }
 }
